# insomnia-rs

./: .gitignore  Cargo.toml  README.md  example.toml  merge_mp3s.sh
projects/insomnia/: Cargo.toml
projects/insomnia/src/: lib.rs
projects/insomnia/src/annotation/: mod.rs
projects/schlaflosigkeit/: Cargo.toml
projects/schlaflosigkeit/src/: lib.rs  main.rs
projects/schlaflosigkeit/src/annotate/: mod.rs
projects/schlaflosigkeit/src/denoise/: mod.rs
projects/schlaflosigkeit/src/record/: mod.rs
src/: cli.yml  lib.rs  main.rs
src/commands/: mod.rs
src/commands/annotate/: mod.rs
src/commands/config/: mod.rs
src/commands/record/: mod.rs
src/record/: mod.rs
