[package]
name = "schlaflosigkeit"
version = "0.4.0"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"
description = "Tool for recording audio files and annotating them for audacity."

[[bin]]
name = "schlaflosigkeit"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
fern = "0.6"
lazy_static = "1.4"
log = "0.4"
regex = "1.3"

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
default-features = false
features = ["std", "cargo", "derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.5"