[package]
name = "schlaflosigkeit"
version = "0.3.1"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"
description = "Tool for recording audio files and annotating them for audacity."

[[bin]]
name = "schlaflosigkeit"
path = "src/bin/main.rs"

[dependencies]
chrono = "0.4"
clap = {version = "2.33", features = ["yaml"]}
fern = "0.5"
insomnia = { path = "../insomnia" }
lazy_static = "1.3"
log = "0.4"
regex = "1.2"
