[package]
name = "schlaflosigkeit"
version = "0.4.0"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"
description = "Tool for recording audio files and annotating them for audacity."

[[bin]]
name = "schlaflosigkeit"
path = "src/bin/main.rs"

[dependencies]
chrono = "*"
clap = {version = "*", features = ["yaml"]}
fern = "*"
insomnia = { path = "../insomnia" }
lazy_static = "*"
log = "*"
regex = "*"
