[package]
name = "schlaflosigkeit"
version = "0.4.0"
authors = ["Tim Hütz <tim@huetz.biz>"]
edition = "2018"
description = "Tool for recording audio files and annotating them for audacity."

[[bin]]
name = "schlaflosigkeit"
path = "src/bin/main.rs"

[dependencies]
chrono = "0.4.11"
fern = "0.6.0"
insomnia = { path = "../insomnia" }
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.7"

[dependencies.clap]
git = "https://github.com/clap-rs/clap"
features = ["yaml"]